samples/errors/stack_overflow.lox
// Error: Stack overflow from infinite recursion
// expect: runtime error
fun recurse() {
  recurse();
}
recurse();
